@@ -30,11 +30,13 @@ import io.github.axolotlclient.AxolotlClientConfig.api.manager.ConfigManager;
 import io.github.axolotlclient.AxolotlClientConfig.api.options.Option;
 import io.github.axolotlclient.AxolotlClientConfig.api.options.OptionCategory;
 import io.github.axolotlclient.AxolotlClientConfig.api.options.WidgetIdentifieable;
+import io.github.axolotlclient.AxolotlClientConfig.api.util.AlphabeticalComparator;
 import io.github.axolotlclient.AxolotlClientConfig.impl.ui.ClickableWidget;
 import io.github.axolotlclient.AxolotlClientConfig.impl.ui.Element;
 import io.github.axolotlclient.AxolotlClientConfig.impl.util.ConfigStyles;
 import io.github.axolotlclient.AxolotlClientConfig.impl.util.DrawUtil;
 import net.minecraft.client.Minecraft;
+import net.minecraft.resource.language.I18n;
 import org.jetbrains.annotations.Nullable;
 
 public class ButtonListWidget extends ElementListWidget<ButtonListWidget.Entry> {
@@ -42,10 +44,16 @@ public class ButtonListWidget extends ElementListWidget<ButtonListWidget.Entry> 
 	protected static int WIDGET_WIDTH = 150;
 	protected static int WIDGET_ROW_LEFT = -155;
 	protected static int WIDGET_ROW_RIGHT = WIDGET_ROW_LEFT + WIDGET_WIDTH + 10;
+	protected String searchFilter = null;
+	@Nullable
+	private final ConfigManager manager;
+	private final OptionCategory category;
 
 	public ButtonListWidget(ConfigManager manager, OptionCategory category, int screenWidth, int screenHeight, int top, int bottom, int entryHeight) {
 		super(Minecraft.INSTANCE, screenWidth, screenHeight, top, bottom, entryHeight);
 		centerListVertically = false;
+		this.manager = manager;
+		this.category = category;
 
 		addEntries(manager, category);
 	}
@@ -61,16 +69,16 @@ public class ButtonListWidget extends ElementListWidget<ButtonListWidget.Entry> 
 	}
 
 	protected void addCategories(ConfigManager manager, Collection<OptionCategory> categories) {
-		List<OptionCategory> list = categories.stream()
-			.filter(c -> !manager.getSuppressedNames().contains(c.getName())).collect(Collectors.toList());
+		List<OptionCategory> list = manager == null ? new ArrayList<>(categories) : categories.stream()
+			.filter(c -> !manager.getSuppressedNames().contains(c.getName())).toList();
 		for (int i = 0; i < list.size(); i += 2) {
 			addEntry(list.get(i), i < list.size() - 1 ? list.get(i + 1) : null);
 		}
 	}
 
 	protected void addOptions(ConfigManager manager, Collection<Option<?>> options) {
-		List<Option<?>> list = options.stream()
-			.filter(o -> !manager.getSuppressedNames().contains(o.getName())).collect(Collectors.toList());
+		List<Option<?>> list = manager == null ? new ArrayList<>(options) : options.stream()
+			.filter(o -> !manager.getSuppressedNames().contains(o.getName())).toList();
 		for (int i = 0; i < list.size(); i += 2) {
 			addEntry(list.get(i), i < list.size() - 1 ? list.get(i + 1) : null);
 		}
@@ -82,6 +90,32 @@ public class ButtonListWidget extends ElementListWidget<ButtonListWidget.Entry> 
 			addEntry(new Entry(Collections.emptyList()));
 		}
 		addOptions(manager, category.getOptions());
+	}
+
+	public void setSearchFilter(String filter) {
+		this.searchFilter = filter;
+		clearEntries();
+		if (searchFilter == null) {
+			addEntries(manager, category);
+			return;
+		}
+		List<OptionCategory> flattenedCategories = new ArrayList<>();
+		List<Option<?>> flattenedOptions = new ArrayList<>();
+		collectEntries(category, flattenedCategories, flattenedOptions);
+		flattenedCategories.removeIf(c -> !I18n.translate(c.getName()).toLowerCase(Locale.ROOT).contains(searchFilter.toLowerCase(Locale.ROOT)));
+		flattenedOptions.removeIf(c -> !I18n.translate(c.getName()).toLowerCase(Locale.ROOT).contains(searchFilter.toLowerCase(Locale.ROOT)));
+		flattenedCategories.sort((o1, o2) -> AlphabeticalComparator.cmp(I18n.translate(o1.getName()), I18n.translate(o2.getName())));
+		flattenedOptions.sort((o1, o2) -> AlphabeticalComparator.cmp(I18n.translate(o1.getName()), I18n.translate(o2.getName())));
+		addCategories(manager, flattenedCategories);
+		addOptions(manager, flattenedOptions);
+	}
+
+	protected void collectEntries(OptionCategory current, List<OptionCategory> categoryCollector, List<Option<?>> optionCollector) {
+		optionCollector.addAll(current.getOptions());
+		current.getSubCategories().forEach(c -> {
+			categoryCollector.add(c);
+			collectEntries(c, categoryCollector, optionCollector);
+		});
 	}
 
 	protected ClickableWidget createWidget(int x, WidgetIdentifieable id) {
@@ -111,6 +145,11 @@ public class ButtonListWidget extends ElementListWidget<ButtonListWidget.Entry> 
 		DrawUtil.pushScissor(left, top, right - left, bottom - top);
 		super.renderList(mouseX, mouseY, delta);
 		DrawUtil.popScissor();
+	}
+
+	@Override
+	public boolean mouseScrolled(double mouseX, double mouseY, double scrollX, double scrollY) {
+		return getHoveredEntry() != null && getHoveredEntry().mouseScrolled(mouseX, mouseY, scrollX, scrollY) || super.mouseScrolled(mouseX, mouseY, scrollX, scrollY);
 	}
 
 	protected static class Entry extends ElementListWidget.Entry<Entry> {
